# sygen-updater

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  updater.py
.github/workflows/: release-docker.yml
tests/: test_post_apply_npm.py  test_release_resolution.py  test_self_restart.py  test_shebang_rewrite.py  test_version_tracking.py
